Refactoring IO, optimizations and Multithreading problems